--- a/config.gradle
+++ b/config.gradle
@@ -2,7 +2,7 @@ ext {
     isStructureApplication = false
     isDoudouApplication = false
     isDongnaoApplication = false
-    isWanApplication = true;
+    isWanApplication = true
 
     // Google Support
     glideSdkVersion         = "3.7.0"
@@ -35,7 +35,7 @@ ext {
             "palette"                       : "com.android.support:palette-v7:$version.supportSdkVersion",
             supportv4                       : "com.android.support:support-v4:$version.supportSdkVersion",
             //image
-            "glide"                         : "com.github.bumptech.glide:glide:$version.glideSdkVersion",
+            glide                         : "com.github.bumptech.glide:glide:$version.glideSdkVersion",
             //gson
             gson                            : "com.google.code.gson:gson:$version.gson",
 
