--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -328,6 +328,12 @@
             android:name=".demo.allapp.AllAppActivity"
             android:launchMode="singleTask"
             android:screenOrientation="portrait"/>
+            <!--  自定义Behavior，并且使用MD实现仿知乎中向上滑菜单底部FloatingActionBar消失，向下滑动菜单底部FloatingActionBar显示上来 -->
+        <activity
+            android:name=".demo.translationbehavior.act.BehaviorActivity"
+            android:launchMode="singleTask"
+            android:screenOrientation="portrait"
+            />
 
 
         <!-- 序列   基础  handler -->
@@ -345,6 +351,7 @@
             android:name=".demo.handler.act.HelloHandler02"
             android:launchMode="singleTask"
             android:screenOrientation="portrait" />
+
 
     </application>
 
