--- a/config.gradle
+++ b/config.gradle
@@ -4,9 +4,6 @@ ext {
     isDongnaoApplication = false
     isWanApplication = true
 
-    // Google Support
-//    glideSdkVersion         = "3.7.0"
-//    dagger2Version          = "2.10"
 
     android = [
             compileSdkVersion       : 28,
@@ -17,12 +14,16 @@ ext {
             versionName             : "3.5.7",
     ]
 
+
     version = [
             supportSdkVersion               : "28.0.0",  //compile 'com.github.bumptech.glide:glide:3.5.2'  26.1.0  28.0.0
             constraintLayoutVersion         : "1.1.3",
             glideSdkVersion                 : "3.7.0",   //4.8.0
             gson                            : "2.5",
             butterknifeVersion              : "8.5.1",
+
+            actionBarEx                     : "3.2.1",
+            materialProgressBar             : "1.4.2",
 
             router                          : "1.4.1",
             routerCompiler                  : "1.2.2",
@@ -47,6 +48,8 @@ ext {
             butterknife                     : "com.jakewharton:butterknife:$version.butterknifeVersion",
             butterknifeCompiler             : "com.jakewharton:butterknife-compiler:$version.butterknifeVersion",
 
+            actionBarEx                     : "com.github.goweii:ActionBarEx:$version.actionBarEx",
+            materialProgressBar             : "me.zhanghai.android.materialprogressbar:library:$version.materialProgressBar",
 
             //日志
             jLog                            : "com.github.joephone:jLog:$version.jLog",
@@ -55,8 +58,6 @@ ext {
             "router"                        : "com.alibaba:arouter-api:$version.router",
             "router-compiler"               : "com.alibaba:arouter-compiler:$version.routerCompiler",
     ]
-
-
 
 
     compileOptions = [
