--- a/wan/src/main/AndroidManifest.xml
+++ b/wan/src/main/AndroidManifest.xml
@@ -4,19 +4,32 @@
 
     <application
         android:allowBackup="true"
-        android:icon="@mipmap/ic_deer"
+        android:icon="@mipmap/ic_wan"
         android:label="@string/app_wan_name"
-        android:roundIcon="@mipmap/ic_deer"
+        android:roundIcon="@mipmap/ic_wan"
         android:supportsRtl="true"
         android:theme="@style/WanAppTheme">
-        <activity android:name=".main.WanSplashActivity">
+        <activity
+            android:name=".search.act.WanSearchActivity"
+            android:launchMode="singleTask"
+            android:screenOrientation="portrait"
+            >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".main.WanMainActivity" />
+        <activity
+            android:name=".main.WanSplashActivity"
+            android:launchMode="singleTask"
+            android:screenOrientation="portrait"
+            />
+        <activity
+            android:name=".main.WanMainActivity"
+            android:launchMode="singleTask"
+            android:screenOrientation="portrait"
+            />
     </application>
 
 </manifest>
