--- a/config.gradle
+++ b/config.gradle
@@ -4,6 +4,7 @@ ext {
     isDongnaoApplication = false
     isWanApplication = true
     isMapApplication = true
+    isMusicApplication = false
 
 
     android = [
@@ -18,7 +19,7 @@ ext {
 
     version = [
             supportSdkVersion               : "28.0.0",  //compile 'com.github.bumptech.glide:glide:3.5.2'  26.1.0  28.0.0
-            constraintLayoutVersion         : "1.1.3",
+            constraintLayout                : "1.1.3",
             glideSdkVersion                 : "3.7.0",   //4.8.0
             gson                            : "2.5",
             butterknifeVersion              : "8.5.1",
@@ -29,14 +30,20 @@ ext {
             router                          : "1.4.1",
             routerCompiler                  : "1.2.2",
 
+            okhttp                          :"3.5.0",
+
             jLog                            : "1.0.2",
     ]
 
 
     dependencies = [
+            //router
+            "router"                        : "com.alibaba:arouter-api:$version.router",
+            "router-compiler"               : "com.alibaba:arouter-compiler:$version.routerCompiler",
             //support
             appcompatv7                     : "com.android.support:appcompat-v7:$version.supportSdkVersion",
-            "design"                        : "com.android.support:design:$version.supportSdkVersion",
+            design                          : "com.android.support:design:$version.supportSdkVersion",
+            constraintLayout                : "com.android.support.constraint:constraint-layout:$version.constraintLayout",
             "palette"                       : "com.android.support:palette-v7:$version.supportSdkVersion",
             supportv4                       : "com.android.support:support-v4:$version.supportSdkVersion",
             //image
@@ -44,7 +51,7 @@ ext {
             //gson
             gson                            : "com.google.code.gson:gson:$version.gson",
 
-            "constraint-layout"             : "com.android.support.constraint:constraint-layout:$version.constraintLayoutVersion",
+
 
             butterknife                     : "com.jakewharton:butterknife:$version.butterknifeVersion",
             butterknifeCompiler             : "com.jakewharton:butterknife-compiler:$version.butterknifeVersion",
@@ -54,10 +61,10 @@ ext {
 
             //日志
             jLog                            : "com.github.joephone:jLog:$version.jLog",
-
-            //router
-            "router"                        : "com.alibaba:arouter-api:$version.router",
-            "router-compiler"               : "com.alibaba:arouter-compiler:$version.routerCompiler",
+            //umeng
+            umeng                           : "com.umeng.analytics:analytics:latest.integration",
+            //okhttp
+            okhttp                          : "com.squareup.okhttp3:okhttp:$version.okhttp",
     ]
 
 
