--- a/animation/build.gradle
+++ b/animation/build.gradle
@@ -1,12 +1,20 @@
-apply plugin: 'com.android.application'
-apply from: '../basic.gradle'
+if (rootProject.ext.isAnimApplication) {
+    apply plugin: 'com.android.application'
+    apply from: '../basic.gradle'
+} else {
+    apply plugin: 'com.android.library'
+    apply from: '../basic.gradle'
+}
 
 android {
     defaultConfig {
-        applicationId "com.transcendence.animation"
-        testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
+        if(rootProject.ext.isAnimApplication){
+            applicationId "com.transcendence.animation"
+        }
     }
 }
+
+
 
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
