--- a/config.gradle
+++ b/config.gradle
@@ -1,7 +1,8 @@
 ext {
+    isAnimApplication = false
     isStructureApplication = false
     isDoudouApplication = false
-    isDongnaoApplication = false
+    isDongnaoApplication = true
     isWanApplication = true
     isMapApplication = true
     isMusicApplication = false
@@ -12,10 +13,14 @@ ext {
             buildToolsVersion       : "28.0.3",
             minSdkVersion           : 22,
             targetSdkVersion        : 28,
-            versionCode             : 61,   //版本更新了几次，第一版应用是1，以后每更新一次加1
-            versionName             : "3.5.7",
+            versionCode             : 1,   //版本更新了几次，第一版应用是1，以后每更新一次加1
+            versionName             : "1.1.0",
     ]
 
+    compileOptions = [
+            sourceCompatibility: JavaVersion.VERSION_1_8,
+            targetCompatibility: JavaVersion.VERSION_1_8,
+    ]
 
     version = [
             supportSdkVersion               : "28.0.0",  //compile 'com.github.bumptech.glide:glide:3.5.2'  26.1.0  28.0.0
