--- a/map/src/main/AndroidManifest.xml
+++ b/map/src/main/AndroidManifest.xml
@@ -58,7 +58,13 @@
             android:launchMode="singleTask"
             android:screenOrientation="portrait"/>
 
-        <activity android:name=".weinxinloc.act.WeixinLocActivity"
+        <activity
+            android:name=".weinxinloc.act.WeixinLocActivity"
+            android:launchMode="singleTask"
+            android:screenOrientation="portrait"/>
+
+        <activity
+            android:name=".weinxinloc.act.WeixinLocSearchActivity"
             android:launchMode="singleTask"
             android:screenOrientation="portrait"/>
 
@@ -78,6 +84,7 @@
             android:screenOrientation="portrait"/>
         <activity android:name=".mobike.main.act.SlidingUpPanelActivity" />
         <activity android:name=".mobike.main.act.SlidingUpPanelTestActivity" />
+        <activity android:name=".base.act.AmapLocationSourceTwoActivity" />
 
 
         <!-- 高德地图  -->
