--- a/config.gradle
+++ b/config.gradle
@@ -26,8 +26,11 @@ ext {
             supportSdkVersion               : "28.0.0",  //compile 'com.github.bumptech.glide:glide:3.5.2'  26.1.0  28.0.0
             constraintLayout                : "1.1.3",
             glideSdkVersion                 : "3.7.0",   //4.8.0
+
+            //工具
             gson                            : "2.5",
             butterknifeVersion              : "8.5.1",
+            eventbus                        : "3.1.1",
 
             actionBarEx                     : "3.2.1",
             materialProgressBar             : "1.4.2",
