--- a/wan/build.gradle
+++ b/wan/build.gradle
@@ -18,7 +18,7 @@ android {
 
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
-
+    //注解器
     annotationProcessor rootProject.ext.dependencies["router-compiler"]
 
     api rootProject.ext.dependencies.actionBarEx
