--- a/music/build.gradle
+++ b/music/build.gradle
@@ -7,13 +7,42 @@ if (rootProject.ext.isMusicApplication) {
 }
 
 
+android {
+    defaultConfig {
+        if (rootProject.ext.isMusicApplication){
+            //组件模式下设置applicationId
+            applicationId "com.transcendence.music"
+        }
+    }
+
+
+    sourceSets {
+        main {
+            if (rootProject.ext.isMusicApplication) {
+                manifest.srcFile 'src/main/AndroidManifest.xml'
+            } else {
+                manifest.srcFile 'src/main/java/com/transcendence/music/base/AndroidManifest.xml'
+            }
+            jniLibs.srcDirs = ['libs']
+        }
+    }
+
+}
+
+
 
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
 
-    implementation 'com.android.support:appcompat-v7:26.1.0'
-    implementation 'com.android.support.constraint:constraint-layout:1.1.3'
-    testImplementation 'junit:junit:4.12'
-    androidTestImplementation 'com.android.support.test:runner:1.0.2'
-    androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
+
+    annotationProcessor rootProject.ext.dependencies["router-compiler"]
+
+    api rootProject.ext.dependencies.appcompatv7
+    api rootProject.ext.dependencies.design
+    api rootProject.ext.dependencies.supportv4
+    api rootProject.ext.dependencies.constraintLayout
+
+
+    api rootProject.ext.dependencies.router
+
 }
