--- a/wan/src/main/java/com/transcendence/wan/base/AndroidManifest.xml
+++ b/wan/src/main/java/com/transcendence/wan/base/AndroidManifest.xml
@@ -2,27 +2,13 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.transcendence.wan">
 
-    <uses-permission android:name="android.permission.INTERNET" />
-
-    <application
-        android:name=".base.app.WanApp"
-        android:allowBackup="true"
-        android:icon="@mipmap/ic_wan"
-        android:label="@string/app_wan_name"
-        android:roundIcon="@mipmap/ic_wan"
-        android:supportsRtl="true"
-        android:theme="@style/WanAppTheme">
+    <application>
 
         <activity
             android:name=".module.main.act.WanMainActivity"
             android:launchMode="singleTask"
             android:screenOrientation="portrait"
             >
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
-
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
         </activity>
         <activity
             android:name=".module.main.act.WanSplashActivity"
@@ -37,6 +23,7 @@
         <activity android:name=".module.mine.act.RankActivity"
             android:launchMode="singleTask"
             android:screenOrientation="portrait"/>
+
     </application>
 
 </manifest>
