--- a/map/build.gradle
+++ b/map/build.gradle
@@ -6,19 +6,43 @@ if (rootProject.ext.isMapApplication) {
     apply from: '../basic.gradle'
 }
 
+def config = rootProject.ext
+
 android {
     defaultConfig {
-        applicationId "com.transcendence.map"
+        if(config.isMapApplication){
+            applicationId "com.transcendence.map"
+        }
+
+        javaCompileOptions {
+            annotationProcessorOptions {
+                arguments = [AROUTER_MODULE_NAME: project.getName()]
+            }
+        }
 
         ndk {
             //设置支持的SO库架构（开发者可以根据需要，选择一个或多个平台的so）   高德地图使用的ndk
             abiFilters "armeabi", "armeabi-v7a", "arm64-v8a", "x86","x86_64"
         }
     }
+
+
+    sourceSets {
+        main {
+            if (config.isMapApplication) {
+                manifest.srcFile 'src/main/AndroidManifest.xml'
+            } else {
+                manifest.srcFile 'src/main/java/com/transcendence/map/base/AndroidManifest.xml'
+            }
+            jniLibs.srcDirs = ['libs']
+        }
+    }
 }
 
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
+    //注解器
+    annotationProcessor config.dependencies["router-compiler"]
 
     implementation project(':library')
     //3D地图so及jar
@@ -27,4 +51,5 @@ dependencies {
     implementation 'com.amap.api:location:latest.integration'
     //搜索功能
     implementation 'com.amap.api:search:latest.integration'
+
 }
