--- a/build.gradle
+++ b/build.gradle
@@ -16,6 +16,8 @@ buildscript {
 
 allprojects {
     repositories {
+        maven { url "https://maven.aliyun.com/repository/jcenter" }
+        maven { url "https://maven.aliyun.com/repository/google" }
         google()
         jcenter()
         maven { url "https://jitpack.io" }
