--- a/weibo/src/main/AndroidManifest.xml
+++ b/weibo/src/main/AndroidManifest.xml
@@ -53,6 +53,7 @@
             android:launchMode="singleTask"
             android:screenOrientation="portrait"
             />
+        <activity android:name=".ui.login.act.PostSwipeActivity" />
     </application>
 
 </manifest>
